Obsługa wyjątku Zadanie 8.3