@@ -1,26 +1,21 @@
 package com.kodilla.exception.io;
 
-import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.Objects;
 import java.util.stream.Stream;
 
 public class FileReader {
 
-    public void readFile() throws UnsupportedEncodingException {
+    public void readFile(String file) throws FileReaderException {
         ClassLoader classLoader = getClass().getClassLoader();
-        File file = new File(classLoader.getResource("names.txt").getFile());
-        Path path = Paths.get(file.getPath());
 
-        try (Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))) {
+        try (Stream<String> fileLines = Files.lines(Path.of(Objects.requireNonNull(classLoader.getResource(null)).toURI()))) {
             fileLines.forEach(System.out::println);
-        } catch (IOException e) {
-                System.out.println("Oh no! Something went wrong! Error:" + e);
+        } catch (Exception e) {
+            throw new FileReaderException();
         } finally {
             System.out.println("I am gonna be here... always!");
         }
-        System.out.println(file.getPath());
-
     }
 }
